target/debug/build/cap-primitives-d8743b7ecbb82de0/stderr
error[E0635]: unknown feature `windows_by_handle`
 --> <anon>:1:12
  |
1 | #![feature(windows_by_handle)]
  |            ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0635`.
error[E0635]: unknown feature `windows_file_type_ext`
 --> <anon>:1:12
  |
1 | #![feature(windows_file_type_ext)]
  |            ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0635`.
